DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Oct-28-2004 patrickh    The pyjutil library is now linked into the PyJuggler
                        modules that need it using dynamic linking instead of
                        static linking.
Oct-27-2004 patrickh    The configure script option --enable-boost-hacks is no
                        longer required for detection of some Boost.Python
                        installations.
Oct-26-2004 patrickh    Added support for sharing application-specific data in
                        a VR Juggler cluster configuration via a specialization
                        of cluster::UserData<T>.
                        NEW VERSION: 0.12.0
Oct-25-2004 patrickh    Added support for context-specific data in applications
                        using the OpenGL Draw Manager
                        NEW VERSION: 0.11.0
Sep-24-2004 patrickh    Sync up with Gadgeteer 0.19.0.
                        NEW VERSION: 0.10.2
Oct-19-2004 patrickh    Added support for Darwin/Mac OS X.
                        NEW VERSION: 0.10.1
Sep-24-2004 patrickh    Sync up with Gadgeteer 0.17.0.
                        NEW VERSION: 0.10.0
Sep-22-2004 patrickh    Exposed gadget::InputManager.
                        NEW VERSION: 0.9.3
Jul-14-2004 patrickh    NEW VERSION: 0.9.2
Jul-12-2004 patrickh    Exposed vpr::ObjectReader, vpr::ObjectWriter,
                        vpr::ReadableObject, vpr::WriteableObject, and
                        vpr::SerializableObject.
                        PyJuggler.vpr is now imported automatically with all
                        the other modules under the PyJuggler namespace.
Jul-09-2004 patrickh    Regenerated the Boost.Python bindings code.
Jul-02-2004 patrickh    NEW VERSION: 0.9.1
Jul-01-2004 patrickh    Fixed a problem with multiple threads and Python 2.3 on
                        Windows.