@@ -1,5 +1,10 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Nov-06-2004 patrickh    Exposed jccl::ConfigManager, jccl::ConfigDefinition,
+                        jccl::PropertyDefinition, and jccl::VarType.  Removed
+                        methods that expose the underly use of CppDOM in JCCL
+                        classes.
+                        NEW VERSION: 0.13.0
 Oct-28-2004 patrickh    The pyjutil library is now linked into the PyJuggler
                         modules that need it using dynamic linking instead of
                         static linking.
